# MultiMC4

./: .gitignore  Clang.cmake  Linux.cmake  OSX.cmake  README.md  Windows_Toolchain.cmake  configure.sh
deb/: debian.changelog  debian.control  debian.rules  multimc4.dsc
osx/Contents/: Info.plist
osx/Contents/Resources/: MultiMC128.icns  MultiMC16.icns  MultiMC48.icns
osx/Resources/: MultiMC32.icns
src/: AppSettings.cpp  AppSettings.h  AppUtils.cpp  AppUtils.h  CMakeLists.txt  InstIconList.cpp  InstIconList.h  InstIcons.h  Instance.cpp  Instance.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  Task.cpp  Task.h  apputils.cpp  apputils.h  buildtag.cpp  buildtag.h  config.h.in  curlutils.cpp  curlutils.h  datautils.cpp  datautils.h  fsutils.cpp  fsutils.h  httputils.cpp  httputils.h  includes.h  insticonlist.cpp  insticonlist.h  insticons.h  langutils.cpp  langutils.h  launcherdata.h  multimc.cpp  multimc.h  multimc.rc  osutils.h  (+4 more)
src/data/: AppSettings.cpp  AppSettings.h  Instance.cpp  Instance.h  appsettings.cpp  appsettings.h  centralmodlist.cpp  centralmodlist.h  configpack.cpp  configpack.h  forgeversions.cpp  forgeversions.h  instance.cpp  instance.h  instancemodel.cpp  instancemodel.h  insticonlist.cpp  insticonlist.h  instlist.cpp  instlist.h  lwjglversionlist.cpp  lwjglversionlist.h  mcprocess.cpp  mcprocess.h  mcversion.h  mcversionlist.cpp  mcversionlist.h  minecraftforge.cpp  minecraftforge.h  mod.cpp  mod.h  modlist.cpp  modlist.h  snapshotlist.cpp  snapshotlist.h  stdinstance.cpp  stdinstance.h  texturepack.cpp  texturepack.h  texturepacklist.cpp  (+7 more)
src/gui/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  aboutdlg.cpp  aboutdlg.h  advancedmsgdlg.cpp  advancedmsgdlg.h  changeicondialog.cpp  changeicondialog.h  consolewindow.cpp  consolewindow.h  downgradedialog.cpp  downgradedialog.h  exportinstwizard.cpp  exportinstwizard.h  ftbselectdialog.cpp  ftbselectdialog.h  importpackwizard.cpp  importpackwizard.h  installforgedialog.cpp  installforgedialog.h  instancectrl.cpp  instancectrl.h  listselectdialog.cpp  listselectdialog.h  logindialog.cpp  logindialog.h  lwjgldialog.cpp  lwjgldialog.h  mainwindow.cpp  mainwindow.h  minecraftversiondialog.cpp  minecraftversiondialog.h  modeditdialog.cpp  modeditdialog.h  modeditwindow.cpp  modeditwindow.h  newinstancedlg.cpp  newinstancedlg.h  savemgrwindow.cpp  (+13 more)
src/java/: annotations.cpp  annotations.h  classfile.h  endian.h  javautils.cpp  javautils.h
src/lang/: CMakeLists.txt  MultiMC.pot  en.po  es.po  ru_RU.po
src/launcher/: AppletWrap.java  CMakeLists.txt  MCFrame.java  MultiMCLauncher.java
src/launcher/net/minecraft/: Launcher.java
src/md5/: CMakeLists.txt  md5.cpp  md5wrapper.cpp
src/patchlib/: CMakeLists.txt  bspatch.c  bspatch.h
src/resources/: CMakeLists.txt  MultiMC.exe.manifest  Thumbs.db
src/resources/insticons/: .directory  Thumbs.db
src/resources/tbaricons/: .directory  Thumbs.db
src/tasks/: checkupdatetask.cpp  checkupdatetask.h  downgradetask.cpp  downgradetask.h  exportpacktask.cpp  exportpacktask.h  filecopytask.cpp  filecopytask.h  filedownloadtask.cpp  filedownloadtask.h  gameupdatetask.cpp  gameupdatetask.h  imgurtask.cpp  imgurtask.h  lambdatask.cpp  lambdatask.h  logintask.cpp  logintask.h  lwjglinstalltask.cpp  lwjglinstalltask.h  moddertask.cpp  moddertask.h  newschecktask.cpp  newschecktask.h  pastebintask.cpp  pastebintask.h  task.cpp  task.h  ziptask.cpp  ziptask.h
src/utils/: apputils.cpp  apputils.h  curlutils.cpp  curlutils.h  datautils.cpp  datautils.h  fsutils.cpp  fsutils.h  fsutils_secure.cpp  httputils.cpp  langutils.cpp  langutils.h  osutils.h  xdg-user-dir-lookup.cpp  xdg-user-dir-lookup.h
src/wxinclude/: CMakeLists.txt  wxInclude.cpp
